# FerrFlow

./: .ferrflow  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  SECURITY.md  action.yml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
benches/: ferrflow_benchmarks.rs
benchmarks/: compare.sh  run.sh
benchmarks/fixtures/: generate.rs  generate.sh
benchmarks/fixtures/definitions/: mono-100-1k.json  mono-50-5k.json  mono-large.json  mono-large.toml  mono-medium.json  mono-medium.toml  mono-small.json  mono-small.toml  single.json  single.toml
docs/: errors.md
ferrflow-wasm/: Cargo.toml
ferrflow-wasm/src/: lib.rs
npm/: package.json
npm/scripts/: publish-wasm.sh  publish.sh
schema/: ferrflow.json
scripts/: sync-optional-deps.js  test-action-bot.sh
src/: bot_token.rs  changelog.rs  cli.rs  config.rs  conventional_commits.rs  error_code.rs  git.rs  hooks.rs  lib.rs  main.rs  monorepo.rs  prerelease.rs  query.rs  release.rs  status.rs  telemetry.rs  validate.rs  versioning.rs
src/agent/: mod.rs
src/auth/: mod.rs
src/forge/: github.rs  gitlab.rs  mod.rs
src/formats/: chart_yaml.rs  csproj.rs  gemspec.rs  gomod.rs  gradle.rs  helm.rs  json.rs  mix_exs.rs  mod.rs  package_swift.rs  pubspec_yaml.rs  toml_format.rs  txt.rs  xml.rs
src/hooks/: context.rs  mod.rs  point.rs  resolve.rs  runner.rs
src/issues/: mod.rs
tests/: output_grouping.rs
tests/fixtures/: run-tests.sh
tests/fixtures/definitions/: changelog-breaking.json  changelog-monorepo-per-package.json  changelog-multiple-same-type.json  changelog-scoped.json  commit-breaking-body.json  commit-breaking-footer.json  commit-empty-scope.json  commit-mixed-conventional-non.json  commit-multiple-types.json  commit-non-conventional.json  commit-only-whitespace.json  commit-scoped-mismatch.json  commit-uppercase-ignored.json  config-all-options.json  config-dotfile-format.toml  config-json-format.json  config-json5-format.toml  config-minimal.json  config-snake-case.json  config-toml-format.toml  config-toml-workspace.json  floating-tags-both.json  floating-tags-major.toml  floating-tags-minor.json  floating-tags-monorepo.json  format-gomod.json  head-branch-custom.json  head-branch-main.json  head-branch-master.json  hooks-continue-on-failure.json  hooks-failure.json  hooks-ordering.json  hooks-package-override.json  monorepo-10pkg-selective.json  monorepo-3pkg-chain-deps.json  monorepo-5pkg-mixed.json  monorepo-all-untouched.json  monorepo-breaking-one-only.json  monorepo-breaking.json  monorepo-depends-on-transitive.json  (+65 more)
