[package]
name = "ferrflow"
version = "1.0.0"
edition = "2024"
description = "Universal semantic versioning for monorepos and classic repos"
license = "MIT"
repository = "https://github.com/FerrFlow/FerrFlow"
homepage = "https://github.com/FerrFlow/FerrFlow"
keywords = ["semver", "versioning", "monorepo", "changelog", "release"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ferrflow"
path = "src/main.rs"

[[bin]]
name = "generate-fixtures"
path = "benchmarks/fixtures/generate.rs"

[lib]
name = "ferrflow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1.0"
toml_edit = { version = "0.25", features = ["serde"] }
quick-xml = "0.39"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
semver = "1"
regex = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "ferrflow_benchmarks"
harness = false
