[workspace]
members = [".", "ferrflow-wasm"]
resolver = "3"

[package]
name = "ferrflow"
version = "2.4.0"
edition = "2024"
description = "Universal semantic versioning for monorepos and classic repos"
license = "MPL-2.0"
repository = "https://github.com/FerrFlow/FerrFlow"
homepage = "https://github.com/FerrFlow/FerrFlow"
keywords = ["semver", "versioning", "monorepo", "changelog", "release"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ferrflow"
path = "src/main.rs"

[[bin]]
name = "generate-fixtures"
path = "benchmarks/fixtures/generate.rs"

[lib]
name = "ferrflow"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:git2", "dep:ureq", "dep:clap", "dep:colored", "dep:hmac"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1.0"
toml_edit = { version = "0.25", features = ["serde"] }
semver = "1"
regex = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
colored = { version = "3", optional = true }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"], optional = true }
ureq = { version = "3", features = ["json"], optional = true }
sha2 = "0.11.0"
hex = "0.4.3"
hmac = { version = "0.13", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "ferrflow_benchmarks"
harness = false
