[package]
name = "ferrflow-wasm"
version = "0.1.0"
edition = "2024"
description = "FerrFlow core functions compiled to WebAssembly"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferrflow = { path = "..", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
